--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "simplecalculator",
-  "homepage": "https://simplereactcalculator.github.io/react-gh-pages",
+  "homepage": "https://jimmykyalo.github.io/simplereactcalculator/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
